# backend/internal/models/attachment.go
@@ -1,0 +1,8 @@
+package models
+
+type Attachment struct {
+	ID          string `json:"id"`
+	Name        string `json:"name"`
+	ContentType string `json:"contentType"`
+	Size        int    `json:"size"`
+}
